css/index.css
:root {
    --sunset-orange: #FF5A5A;
    --white: #fff;
    --gunmetal: #2C363F;
    --full-width-without-scrollbar: calc(100vw - (100vw - 100%));
}

* {
    box-sizing: border-box;
}

html {
    overflow-x: hidden;
    scroll-behavior: smooth;
}

body, html {
    height: 100%;
    width: 100vw;
    margin: 0px;
    padding: 0px;
}

h2, h3, h4, h5, h6 {
    font-family: Lato, sans-serif;
}

p {
    font-size: calc(12px + (16 - 12) * ((100vw - 300px) / (1600 - 300)));
    font-family: 'Merriweather', serif;
    letter-spacing: 0.02em;
    line-height: 1.4em;
}

/* Prevent elements from extending beyond viewport */

img, embed, object, video {
    max-width: 100%;
}

/* Ensure touch targets can be easily pressed with a finger */

.hidden {
    position: absolute;
    left: -10000px;
    top: auto;
    width: 1px;
    height: 1px;
    overflow: hidden;
}

#navbar a, button {
    min-width: 48px;
    min-height: 48px;
}

/*NAVBAR*/

#navbar {
    display: flex;
    position: fixed;
    width: var(--full-width-without-scrollbar);
    z-index: 10;
    background: var(--gunmetal);
    transition: all 0.5;
    max-width: 100vw;
}

#navbar div {
    display: inline-flex;
    flex: 1;
}

#navbar div a {
    display: flex;
    margin: 0 calc(100% / 30);
    flex-direction: column;
    justify-content: center;
    color: var(--sunset-orange);
    font-style: normal;
    text-decoration: none;
    font-size: calc(12px + (16 - 12) * ((100vw - 300px) / (1600 - 300)));
}

#navbar div a:hover {
    border-bottom: solid 2px;
}

#nav-left {
    align-self: flex-start;
    flex: 1;
}

#nav-right {
    justify-content: flex-end;
}

#nav-right a {
    text-align: center;
}

#nav-center {
    align-self: center;
    display: flex
}

#logo {
    height: 45px;
    animation-duration: 1s;
    animation-name: fallIn;
}

#social-media {
    position: fixed;
    top: 50%;
    right: 10px;
}

/* Style all font awesome icons */

.fa {
    padding: 20px;
    font-size: 30px;
    width: 50px;
    text-align: center;
    text-decoration: none;
}

/* Add a hover effect if you want */

.fa:hover {
    opacity: 0.7;
}

/* Set a specific color for each brand */

/* Facebook */

.fa-facebook {
    background: #3B5998;
    color: white;
}

/* Twitter */

.fa-twitter {
    background: #55ACEE;
    color: white;
}

.fa {
    padding: 20px;
    font-size: 30px;
    width: 30px;
    text-align: center;
    text-decoration: none;
    border-radius: 50%;
}

@keyframes fallIn {
    0% {
        transform: translate(0px, -50px);
    }
    50% {
        transform: translate(0px, 1px);
    }
    100% {
        transform: translate(0px, 0px);
    }
}

#navbar div a:first-child {
    animation-duration: 1s;
    animation-name: fallIn;
}

#navbar div a:nth-child(2) {
    animation-duration: 1.5s;
    animation-name: fallIn;
}

#navbar div a:nth-child(3) {
    animation-duration: 2s;
    animation-name: fallIn;
}

#navbar div a:nth-child(4) {
    animation-duration: 2.5s;
    animation-name: fallIn;
}

@media all and (max-width: 600px) {
    #navbar {
        flex-wrap: wrap;
        flex-direction: column;
    }
    #nav-left, #nav-right {
        flex-basis: 50%;
        justify-content: center;
        width: 100%;
    }
}

/*SECTION*/

section:not(#timeline):not(#portfolio) {
    display: flex;
}

section {
    padding-top: 75px;
}

main {
    width: 100vw;
}

/*HERO*/

#hero {
    height: 100vh;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    background: var(--gunmetal);
    color: var(--white);
}

#hero h1 {
    font-size: calc(40px + (80 - 40) * ((100vw - 300px) / (1600 - 300)));
    font-family: Lato, sans-serif;
    font-weight: 600;
    margin-bottom: .33em;
}

#hero h1 em {
    color: var(--sunset-orange);
    font-style: normal;
}

/*Animation only looks correct on larger screen*/
@media only screen and (min-width: 1080px) {
    #hero h1 {
        overflow: hidden;
        /* Ensures the content is not revealed until the animation */
        white-space: nowrap;
        /* Keeps the content on a single line */
        margin: 0 auto .33em auto;
        /* Gives that scrolling effect as the typing happens */
        letter-spacing: .1em;
        /* Adjust as needed */
        animation: typing 3.25s steps(40, end)
    }
    /* The typing effect */
    @keyframes typing {
        from {
            width: 0
        }
        to {
            width: 100%
        }
    }

    #hero h1 em:nth-child(2), #hero h1 i:nth-child(3) {
        -webkit-animation: fadein 3.5s;
        /* Safari, Chrome and Opera > 12.1 */
        -moz-animation: fadein 3.5s;
        /* Firefox < 16 */
        -ms-animation: fadein 3.5s;
        /* Internet Explorer */
        -o-animation: fadein 3.5s;
        /* Opera < 12.1 */
        animation: fadein 3.5s;
    }
    #hero h1 em:nth-child(4), #hero h1 i:nth-child(5) {
        -webkit-animation: fadein 5s;
        /* Safari, Chrome and Opera > 12.1 */
        -moz-animation: fadein 5s;
        /* Firefox < 16 */
        -ms-animation: fadein 5s;
        /* Internet Explorer */
        -o-animation: fadein 5s;
        /* Opera < 12.1 */
        animation: fadein 5s;
    }
    #hero h1 em:nth-child(6), #hero h1 i:nth-child(7) {
        -webkit-animation: fadein 6s;
        /* Safari, Chrome and Opera > 12.1 */
        -moz-animation: fadein 6s;
        /* Firefox < 16 */
        -ms-animation: fadein 6s;
        /* Internet Explorer */
        -o-animation: fadein 6s;
        /* Opera < 12.1 */
        animation: fadein 6s;
    }
    #hero p {
        -webkit-animation: fadein 7s;
        /* Safari, Chrome and Opera > 12.1 */
        -moz-animation: fadein 7s;
        /* Firefox < 16 */
        -ms-animation: fadein 7s;
        /* Internet Explorer */
        -o-animation: fadein 7s;
        /* Opera < 12.1 */
        animation: fadein 7s;
    }
    @keyframes fadein {
        0% {
            opacity: 0;
        }
        90% {
            opacity: 0;
        }
        91% {
            opacity: .1;
        }
        92% {
            opacity: .2;
        }
        93% {
            opacity: .3;
        }
        94% {
            opacity: .4;
        }
        95% {
            opacity: .5;
        }
        95% {
            opacity: .6;
        }
        95% {
            opacity: .7;
        }
        95% {
            opacity: .8;
        }
        95% {
            opacity: .9;
        }
        100% {
            opacity: 1;
        }
    }
}

#hero h1 p {
    display: flex;
    flex-wrap: wrap;
    margin: 0;
    margin-left: 40px;
    margin-right: 40px;
}

/* Smartphones (portrait) ----------- */

@media only screen and (max-width: 320px) {}

/* iPhone landscape range */

@media (max-width:480px) {
    .hero {
        font-size: 2rem;
        line-height: 100%;
    }
    .middle {
        top: 20%;
    }
}

/* larger than iPhone landscape, an in the iPad portrait range */

@media (min-width:481px) and (max-width:768px) {
    .hero {
        font-size: 3rem;
        line-height: 100%;
    }
    .middle {
        top: 20%;
    }
}

/*SKILLS*/

#skills {
    border: solid 6px var(--gunmetal);
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    min-height: 100vh;
    color: var(--gunmetal);
}

#skills div {
    margin: 0 5%;
}

#skills div h2 {
    text-align: center;
}

.svg-text-color--gunmetal {
    fill: var(--gunmetal);
}

.circular-chart {
    display: block;
    margin: 10px auto;
    max-width: 80%;
    max-height: 250px;
    width: 100%;
}

.circle {
    stroke: var(--sunset-orange);
    fill: none;
    stroke-width: 2.8;
    stroke-linecap: round;
    animation: progress 1s ease-out forwards;
}

@keyframes progress {
    0% {
        stroke-dasharray: 0 100;
    }
}

/*TIMELINE*/

/* Set a background color */

#timeline {
    min-height: 100vh;
}

#timeline h2 {
    color: var(--sunset-orange);
}

#timeline h3, #timeline p {
    color: white;
}

body {
    background-color: white;
    font-family: Helvetica, sans-serif;
}

/* The actual timeline (the vertical ruler) */

.timeline {
    position: relative;
    max-width: 1200px;
    margin: 0 auto;
}

/* The actual timeline (the vertical ruler) */

.timeline::after {
    content: '';
    position: absolute;
    width: 6px;
    background-color: #2C363F;
    top: 0;
    bottom: 0;
    left: 50%;
    margin-left: -3px;
}

/* Container around content */

.timeline-container {
    padding: 10px 40px;
    position: relative;
    background-color: inherit;
    width: 50%;
}

/* The circles on the timeline */

.timeline-container::after {
    content: '';
    position: absolute;
    width: 25px;
    height: 25px;
    right: -17px;
    background-color: white;
    border: 4px solid #FF5A5A;
    top: 15px;
    border-radius: 50%;
    z-index: 1;
}

/* Place the container to the left */

.left {
    left: 0;
}

/* Place the container to the right */

.right {
    left: 50%;
}

/* Add arrows to the left container (pointing right) */

.left::before {
    content: " ";
    height: 0;
    position: absolute;
    top: 22px;
    width: 0;
    z-index: 1;
    right: 30px;
    border: medium solid white;
    border-width: 10px 0 10px 10px;
    border-color: transparent transparent transparent #2C363F;
}

/* Add arrows to the right container (pointing left) */

.right::before {
    content: " ";
    height: 0;
    position: absolute;
    top: 22px;
    width: 0;
    z-index: 1;
    left: 30px;
    border: medium solid white;
    border-width: 10px 10px 10px 0;
    border-color: transparent #2C363F transparent transparent;
}

/* Fix the circle for containers on the right side */

.right::after {
    left: -17px;
}

/* The actual content */

.content {
    padding: 20px 30px;
    background-color: #2C363F;
    position: relative;
    border-radius: 6px;
}

/* Media queries - Responsive timeline on screens less than 600px wide */

@media screen and (max-width: 600px) {
    /* Place the timelime to the left */
    .timeline::after {
        left: 31px;
    }
    /* Full-width containers */
    .timeline-container {
        width: 100%;
        padding-left: 70px;
        padding-right: 25px;
    }
    /* Make sure that all arrows are pointing leftwards */
    .timeline-container::before {
        left: 60px;
        border: medium solid white;
        border-width: 10px 10px 10px 0;
        border-color: transparent white transparent transparent;
    }
    /* Make sure all circles are at the same spot */
    .left::after, .right::after {
        left: 15px;
    }
    /* Make all right containers behave like the left ones */
    .right {
        left: 0%;
    }
}

/*PORTFOLIO*/

#portfolio {
    display: grid;
    grid-gap: 80px;
    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
    grid-template-rows: repeat(3, auto);
    min-height: 100vh;
    background: var(--gunmetal);
    padding-left: 80px;
    padding-right: 80px;
}

#portfolio div {
    display: flex;
    justify-content: center;
    align-items: center;
    background: white;
    height: 400px;
}

#portfolio h2 {
    color: var(--gunmetal);
}



#contact iframe document html body {
    background: var(--gunmetal);
}

